fix overflowing tables; relative links;css definitions

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,17 +49,24 @@
 }
 
 #wiki sup {
+    vertical-align: super;
     top: 0;
+}
+
+#wiki sub {
+    vertical-align: sub;
 }
 
 #wiki table.infobox td,
 #wiki table.infobox th {
     padding: 2px 3px 2px 3px;
-    font-size: 12px;
 }
 
-#wiki table.infobox td > a {
-    font-size: 12px;
+#wiki table.infobox td li,
+#wiki table.infobox td > a,
+#wiki table.infobox td > p
+{
+    font-size: 12px; */
 }
 
 /* // smaller references
@@ -81,6 +88,32 @@
 
 #wiki sup.mw-ref:target, #wiki span.mw-ref:target {
     background-color: #eaf3ff;
+}
+
+#wiki .mbox-small {
+    clear: right;
+    float: right;
+    margin: 4px 0 4px 1em;
+    box-sizing: border-box;
+    width: 238px;
+    font-size: 88%;
+    line-height: 1.25em;
+}
+
+#wiki .nobold {
+    font-weight: normal;
+}
+
+#wiki .external {
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(transparent,transparent),url("data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2212%22 height=%2212%22%3E %3Cpath fill=%22%23fff%22 stroke=%22%2336c%22 d=%22M1.5 4.518h5.982V10.5H1.5z%22/%3E %3Cpath fill=%22%2336c%22 d=%22M5.765 1H11v5.39L9.427 7.937l-1.31-1.31L5.393 9.35l-2.69-2.688 2.81-2.808L4.2 2.544z%22/%3E %3Cpath fill=%22%23fff%22 d=%22M9.995 2.004l.022 4.885L8.2 5.07 5.32 7.95 4.09 6.723l2.882-2.88-1.85-1.852z%22/%3E %3C/svg%3E");
+    padding-right: 13px;
+}
+
+#wiki .navbar {
+    min-height: 15px;
+    margin-bottom: 0px;
 }
 
 #wiki div.NavFrame div.NavHead {
